...
        loadTagsTrigger()
        loadCategoriesTrigger()
    }, []);

    return (
        <AppScreen
            testID={"Screen.Catalog"}
            refreshControl={<RefreshControl refreshing={isLoading} onRefresh={retry}/>}>

            {/* Search */}
            <ThemedText type={"subtitle"}>{t("Search")}</ThemedText>
            <Spacer size={5}/>
            <SearchPanelLink />
...
