...
    function onModeChange(newValue: SearchSource) {
        if (source == newValue) return
        setSource(newValue)
    }

    return (
        <AppScreen testID={'Screen.Search'} title={t("Search")}>
            <Spacer size={10}/>
            <HStack>
                <TextInput style={styles.searchField}  value={searchQuery} onChangeText={onSearchQueryTextChange}/>
                <Spacer size={5}/>
                <Button title={t("Search")} onPress={() => search(searchQuery)}/>
            </HStack>
...
